--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
+     <title>Shopping Web</title>
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/style.css">
      <script src="js/bootstrap.bundle.js"></script>
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link active  text-white" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="about.html">About</a>
@@ -493,8 +493,8 @@
 </div>
      </div>
 </div>
-<div class="footer p-5 text-center bg-dark text-white h3">
-     copyright@2022 ducat india
+<div class="footer p-3 text-center bg-dark text-white ">
+     <p class="txt_footer">copyright@2023 shopping web</p>
 </div>
 
 </body>
