--- a/index.html
+++ b/index.html
@@ -123,28 +123,28 @@
      </div>
      <div class="carousel-inner">
        <div class="carousel-item active" data-bs-interval="10000">
-         <img src="image/banner1.jfif" height="400px" class="d-block w-100" alt="...">
+         <img src="image/Banner1.avif" height="400px" class="d-block w-100" alt="...">
          <div class="carousel-caption d-none d-md-block">
            <h5>First slide label</h5>
            <p>Some representative placeholder content for the first slide.</p>
          </div>
        </div>
        <div class="carousel-item" data-bs-interval="2000">
-         <img src="image/banner2.jfif" height="400px" class="d-block w-100" alt="...">
+         <img src="image/Banner2.jpg" height="400px" class="d-block w-100" alt="...">
          <div class="carousel-caption d-none d-md-block">
            <h5>Second slide label</h5>
            <p>Some representative placeholder content for the second slide.</p>
          </div>
        </div>
        <div class="carousel-item">
-         <img src="image/banner3.jfif" height="400px" class="d-block w-100" alt="...">
+         <img src="image/banner3.avif" height="400px" class="d-block w-100" alt="...">
          <div class="carousel-caption d-none d-md-block">
            <h5>Third slide label</h5>
            <p>Some representative placeholder content for the third slide.</p>
          </div>
        </div>
        <div class="carousel-item">
-          <img src="image/pic6.jpg" height="400px" class="d-block w-100" alt="...">
+          <img src="image/Banner4.avif" height="400px" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Fourt  slide label</h5>
             <p>Some representative placeholder content for the fourth slide.</p>
@@ -160,7 +160,7 @@
        <span class="visually-hidden">Next</span>
      </button>
    </div>
-<div class="container-fluid text-white bg-primary p-5 text-center">
+<div class="container-fluid text-white bg-primary p-5  text-center">
      <p class="h1">Content Section</p>
 </div>
 <div class="container-fluid">
