--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container-fluid">
      <!-- Nav bar -->
-     <nav class="navbar navbar-expand-lg bg-primary row">
+     <nav class="navbar navbar-expand-lg bg-dark row">
           <div class="container-fluid">
             <a class="navbar-brand text-white" href="#">MyShop</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
